WIP: testing CICD (1)

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-@tres-ases:registry=https://npm.pkg.github.com
+@defol-cl:registry=https://npm.pkg.github.com
 
 link-workspace-packages = true
 prefer-workspace-packages = true
