--- a/infra/webapp/package.json
+++ b/infra/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@defol/infra-webapp",
+  "name": "@defol-cl/infra-webapp",
   "version": "0.1.0",
   "bin": {
     "infra": "bin/webapp.js"
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@aws-cdk/core": "1.115.0",
-    "@defol/infra-libs": "workspace:^1.0.0",
+    "@defol-cl/infra-libs": "workspace:^1.0.0",
     "source-map-support": "^0.5.16"
   }
 }
