--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -1,4 +1,9 @@
-name: publish-libs
+## Action Secrets:
+# - AWS_ACCESS_KEY_ID
+# - AWS_SECRET_ACCESS_KEY
+# - AWS_REGION
+
+name: build-backend
 
 on:
   push:
@@ -11,8 +16,42 @@ on:
       - .github/workflows/backend.yml
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      libs: ${{ steps.packages-libs-changed.outputs.any_changed }}
+      backend: ${{ steps.packages-backend-changed.outputs.any_changed }}
+    steps:
+      - id: packages-libs-changed
+        name: detect changes on packages/libs
+        uses: tj-actions/changed-files@v1.1.3
+        with:
+          files: packages/libs
+      - id: packages-backend-changed
+        name: detect changes on packages/backend
+        uses: tj-actions/changed-files@v1.1.3
+        with:
+          files: packages/backend
+
+  publish-libs:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.libs == 'true'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+      - name: installing typescript
+        run: npm install -g typescript
+      - name: npm-publish
+        working-directory: ./packages/libs
+        run: npm publish
+
   build-deploy:
     runs-on: ubuntu-latest
+    needs: [changes, publish-libs]
+    if: needs.changes.outputs.libs == 'true' || needs.changes.outputs.backend == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
