--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "license": "ISC",
   "author": "Tres Ases",
-  "repository": "https://github.com/tres-ases/defol",
+  "repository": "git://github.com/defol-cl/defol.git",
   "scripts": {
     "build": "pnpm recursive run build",
     "clean": "pnpm recursive exec -- rm -rf node_modules; rm shrinkwrap.yaml; rm -rf node_modules",
