--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -22,16 +22,21 @@ jobs:
       libs: ${{ steps.packages-libs-changed.outputs.any_changed }}
       backend: ${{ steps.packages-backend-changed.outputs.any_changed }}
     steps:
+      - uses: actions/checkout@v2
       - id: packages-libs-changed
         name: detect changes on packages/libs
         uses: tj-actions/changed-files@v1.1.3
         with:
-          files: packages/libs
+          files: |
+            .github/workflows/all.yml
+            packages/libs
       - id: packages-backend-changed
         name: detect changes on packages/backend
         uses: tj-actions/changed-files@v1.1.3
         with:
-          files: packages/backend
+          files: |
+            .github/workflows/all.yml
+            packages/backend
 
   publish-libs:
     runs-on: ubuntu-latest
