--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
+  "author": "Tres Ases",
+  "license": "ISC",
+  "repository": "git://github.com/defol-cl/defol.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tres Ases",
-  "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.83"
   }
