--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -6,6 +6,9 @@
   "author": "Tres Ases",
   "license": "ISC",
   "repository": "git://github.com/defol-cl/defol.git",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
