--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -45,11 +45,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '12'
-          registry-url: 'https://npm.pkg.github.com'
+          node-version: 12
+          registry-url: https://npm.pkg.github.com
           scope: '@defol-cl'
       - name: npm-publish
         working-directory: ./packages/libs
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm publish
 
   build-deploy:
