--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -50,7 +50,7 @@ jobs:
       - name: npm-publish
         working-directory: ./packages/libs
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm publish
 
   build-deploy:
