--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -47,6 +47,9 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com
+      - name: npm-install
+        working-directory: ./packages/libs
+        run: npm install --production
       - name: npm-publish
         working-directory: ./packages/libs
         env:
@@ -61,7 +64,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '12'
+          node-version: 12
+          registry-url: https://npm.pkg.github.com
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.10.3
@@ -73,9 +77,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-      - name: pnpm-install
+      - name: npm-install
         working-directory: ./packages/backend
-        run: pnpm install --prod
+        run: npm install --prod
       - name: lambda-layer
         working-directory: ./packages/backend
         run: |
