--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -2,7 +2,8 @@
   "name": "@defol-cl/libs",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/index",
+  "types": "src/index",
   "author": "Tres Ases",
   "license": "ISC",
   "repository": "git://github.com/defol-cl/defol.git",
@@ -10,6 +11,7 @@
     "registry": "https://npm.pkg.github.com"
   },
   "scripts": {
+    "prepare": "tsc --noEmit false --allowJs false --paths null",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
