--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -14,7 +14,7 @@
     "prepare": "tsc --noEmit false --allowJs false --paths null",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@types/aws-lambda": "^8.10.83"
   }
 }
