--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -36,6 +36,9 @@ jobs:
           files: |
             .github/workflows/all.yml
             packages/backend
+      - name: result
+        run: |
+          echo ""
 
   publish-libs:
     runs-on: ubuntu-latest
@@ -55,6 +58,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm publish
+
   build-deploy:
     runs-on: ubuntu-latest
     needs: [changes, publish-libs]
