WIP: testing CICD (22)

--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -100,4 +100,8 @@ jobs:
         run: sam package --s3-bucket defol-${GITHUB_REF##*/}-resources --output-template-file packaged.yaml --template-file cloudformation.yaml
       - name: sam-deploy
         working-directory: ./packages/backend
-        run: sam deploy --template-file packaged.yaml --no-confirm-changeset --no-fail-on-empty-changeset --stack-name defol-${GITHUB_REF##*/}-backend --s3-bucket defol-${GITHUB_REF##*/}-resources --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }}
+        run: |
+          sam deploy --template-file packaged.yaml --no-confirm-changeset --no-fail-on-empty-changeset \
+          --stack-name defol-${GITHUB_REF##*/}-backend --s3-bucket defol-${GITHUB_REF##*/}-resources \
+          --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }} \
+          --parameter-overrides Env=${GITHUB_REF##*/}
