--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -96,13 +96,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: upload-openapi
-        working-directory: ./packages/backend
         uses: shallwefootball/upload-s3-action@v1.1.3
         with:
           aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_bucket: defol-${GITHUB_REF##*/}-resources
-          source_dir: openapi.yaml
+          source_dir: ./packages/backend/openapi.yaml
           destination_dir: defol-${GITHUB_REF##*/}-backend/${{ github.sha }}
       - name: sam-package
         working-directory: ./packages/backend
