--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -96,13 +96,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: upload-openapi
-        uses: shallwefootball/upload-s3-action@v1.1.3
+        uses: zdurham/s3-upload-github-action@master
         with:
-          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_bucket: defol-${GITHUB_REF##*/}-resources
-          source_dir: ./packages/backend/openapi.yaml
-          destination_dir: defol-${GITHUB_REF##*/}-backend/${{ github.sha }}
+          S3_BUCKET: defol-${GITHUB_REF##*/}-resources
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          FILE: ./packages/backend/openapi.yaml
+          S3_KEY: defol-${GITHUB_REF##*/}-backend/${{ github.sha }}
       - name: sam-package
         working-directory: ./packages/backend
         run: sam package --s3-bucket defol-${GITHUB_REF##*/}-resources --output-template-file packaged.yaml --template-file cloudformation.yaml
