--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -97,7 +97,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: upload-openapi
         uses: zdurham/s3-upload-github-action@master
-        with:
+        env:
           S3_BUCKET: defol-${GITHUB_REF##*/}-resources
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
