--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -103,7 +103,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FILE: ./packages/backend/openapi.yaml
-          S3_KEY: defol-${GITHUB_REF##*/}-backend/${{ github.sha }}
+          S3_KEY: defol-${{ GITHUB_REF##*/ }}-backend/${{ github.sha }}
       - name: sam-package
         working-directory: ./packages/backend
         run: sam package --s3-bucket defol-${GITHUB_REF##*/}-resources --output-template-file packaged.yaml --template-file cloudformation.yaml
