--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -13,7 +13,7 @@ on:
       - develop
 
 jobs:
-  changes:
+  params:
     runs-on: ubuntu-latest
     outputs:
       libs: ${{ steps.packages-libs-changed.outputs.any_changed }}
@@ -36,14 +36,16 @@ jobs:
           files: |
             .github/workflows/all.yml
             packages/backend
-      - name: result
-        run: |
-          echo ""
+      - id: extract-branch
+        name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+
 
   publish-libs:
     runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.libs == 'true'
+    needs: params
+    if: needs.params.outputs.libs == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -61,8 +63,8 @@ jobs:
 
   build-deploy:
     runs-on: ubuntu-latest
-    needs: [changes, publish-libs]
-    if: needs.changes.outputs.libs == 'true' || needs.changes.outputs.backend == 'true'
+    needs: [params, publish-libs]
+    if: needs.params.outputs.libs == 'true' || needs.params.outputs.backend == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -98,12 +100,12 @@ jobs:
       - name: upload-openapi
         uses: zdurham/s3-upload-github-action@master
         env:
-          S3_BUCKET: defol-${GITHUB_REF##*/}-resources
+          S3_BUCKET: ${{ format('defol-{0}-resources', needs.params.outputs.branch }} defol-${GITHUB_REF##*/}-resources
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FILE: ./packages/backend/openapi.yaml
-          S3_KEY: defol-${{ GITHUB_REF##*/ }}-backend/${{ github.sha }}
+          S3_KEY: ${{ format('defol-{0}-backend/{1}', needs.params.outputs.branch, github.sha }}
       - name: sam-package
         working-directory: ./packages/backend
         run: sam package --s3-bucket defol-${GITHUB_REF##*/}-resources --output-template-file packaged.yaml --template-file cloudformation.yaml
