--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -100,7 +100,7 @@ jobs:
       - name: upload-openapi
         uses: zdurham/s3-upload-github-action@master
         env:
-          S3_BUCKET: ${{ format('defol-{0}-resources', needs.params.outputs.branch }} defol-${GITHUB_REF##*/}-resources
+          S3_BUCKET: ${{ format('defol-{0}-resources', needs.params.outputs.branch }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
