--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -100,12 +100,12 @@ jobs:
       - name: upload-openapi
         uses: zdurham/s3-upload-github-action@master
         env:
-          S3_BUCKET: ${{ format('defol-{0}-resources', needs.params.outputs.branch }}
+          S3_BUCKET: ${{ format('defol-{0}-resources', needs.params.outputs.branch) }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FILE: ./packages/backend/openapi.yaml
-          S3_KEY: ${{ format('defol-{0}-backend/{1}', needs.params.outputs.branch, github.sha }}
+          S3_KEY: ${{ format('defol-{0}-backend/{1}', needs.params.outputs.branch, github.sha) }}
       - name: sam-package
         working-directory: ./packages/backend
         run: sam package --s3-bucket defol-${GITHUB_REF##*/}-resources --output-template-file packaged.yaml --template-file cloudformation.yaml
