--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -27,7 +27,7 @@ jobs:
         uses: tj-actions/changed-files@v1.1.3
         with:
           files: |
-            .github/workflows/all.yml
+#            .github/workflows/all.yml
             packages/libs
       - id: packages-backend-changed
         name: detect changes on packages/backend
@@ -113,4 +113,4 @@ jobs:
           sam deploy --template-file packaged.yaml --no-confirm-changeset --no-fail-on-empty-changeset \
           --stack-name defol-${GITHUB_REF##*/}-backend --s3-bucket defol-${GITHUB_REF##*/}-resources \
           --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }} \
-          --parameter-overrides Env=${GITHUB_REF##*/} Sha=${github.sha}
+          --parameter-overrides Env=${GITHUB_REF##*/} Sha=${{ github.sha }}
