--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -58,7 +58,7 @@ jobs:
   build-deploy:
     runs-on: ubuntu-latest
     needs: [params, publish-libs]
-    if: needs.params.outputs.libs == 'true' || needs.params.outputs.backend == 'true'
+#    if: needs.params.outputs.libs == 'true' || needs.params.outputs.backend == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
