WIP: testing CICD (41)

--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -103,7 +103,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FILE: ./packages/backend/openapi.yaml
-          S3_KEY: ${{ format('defol-{0}-backend/{1}', steps.branch.outputs.name, github.sha) }}
+          S3_KEY: ${{ format('defol-{0}-backend/{1}/openapi.yaml', steps.branch.outputs.name, github.sha) }}
       - name: sam-package
         working-directory: ./packages/backend
         run: |
