--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -16,12 +16,17 @@ jobs:
   params:
     runs-on: ubuntu-latest
     outputs:
+      update-libs: ${{ commit-message-libs.outputs.textFound }}
       libs: ${{ steps.packages-libs-changed.outputs.any_changed }}
       backend: ${{ steps.packages-backend-changed.outputs.any_changed }}
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - id: commit-message-libs
+        uses: dlouisenz/last-commit-message-text-finder-action@v1.5
+        with:
+          textToFind: @libs-update
       - id: packages-libs-changed
         name: detect changes on packages/libs
         uses: tj-actions/changed-files@v1.1.3
