--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -16,7 +16,7 @@ jobs:
   params:
     runs-on: ubuntu-latest
     outputs:
-      update-libs: ${{ commit-message-libs.outputs.textFound }}
+      update-libs: ${{ steps.commit-message-libs.outputs.textFound }}
       libs: ${{ steps.packages-libs-changed.outputs.any_changed }}
       backend: ${{ steps.packages-backend-changed.outputs.any_changed }}
     steps:
