WIP: testing CICD (46)

--- a/packages/backend/cloudformation.yaml
+++ b/packages/backend/cloudformation.yaml
@@ -68,7 +68,7 @@ Resources:
           Properties:
             RestApiId: !Ref Api
             Path: /preguntas
-            Method: post
+            Method: get
 
   RuntimeDependenciesLayer:
     Type: AWS::Serverless::LayerVersion
