--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -19,6 +19,7 @@ jobs:
       update-libs: ${{ steps.commit-message-libs.outputs.textFound }}
       libs: ${{ steps.packages-libs-changed.outputs.any_changed }}
       backend: ${{ steps.packages-backend-changed.outputs.any_changed }}
+      frontend: ${{ steps.packages-frontend-changed.outputs.any_changed }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -40,6 +41,13 @@ jobs:
           files: |
             .github/workflows/all.yml
             packages/backend
+      - id: packages-frontend-changed
+        name: detect changes on packages/frontend
+        uses: tj-actions/changed-files@v1.1.3
+        with:
+          files: |
+            .github/workflows/all.yml
+            packages/frontend
 
   publish-libs:
     runs-on: ubuntu-latest
@@ -60,7 +68,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm publish
 
-  build-deploy:
+  backend:
     runs-on: ubuntu-latest
     needs: [params, publish-libs]
     if: always() && (needs.params.outputs.libs == 'true' || needs.params.outputs.backend == 'true')
@@ -124,3 +132,53 @@ jobs:
           --s3-bucket defol-${{ steps.branch.outputs.name }}-resources \
           --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }} \
           --parameter-overrides Env=${{ steps.branch.outputs.name }} Sha=${{ github.sha }}
+
+  frontend:
+    runs-on: ubuntu-latest
+    needs: [ params, publish-libs ]
+    if: always() && (needs.params.outputs.libs == 'true' || needs.params.outputs.frontend == 'true')
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 12
+          registry-url: https://npm.pkg.github.com
+      - name: npm-install-production
+        working-directory: ./packages/frontend
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm install --production
+      - name: npm-install
+        working-directory: ./packages/frontend
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm install
+      - name: npm-run-build
+        working-directory: ./packages/frontend
+        run: npm run-script build
+      - id: branch
+        shell: bash
+        run: echo "##[set-output name=name;]$(echo ${GITHUB_REF#refs/heads/})"
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - uses: marvinpinto/action-inject-ssm-secrets@latest
+        with:
+          ssm_parameter: /defol/${{ steps.branch.outputs.name }}/frontend/cf-distribution-id
+          env_variable_name: CFRONT_DIST_ID
+      - uses: marvinpinto/action-inject-ssm-secrets@latest
+          with:
+            ssm_parameter: /defol/${{ steps.branch.outputs.name }}/frontend/bucket-name
+            env_variable_name: S3_BUCKET
+      - uses: kersvers/s3-sync-with-cloudfront-invalidation@v1.0.0
+        with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_BUCKET: ${{ env.S3_BUCKET }}
+          DISTRIBUTION_ID: ${{ env.CFRONT_DIST_ID }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: ./packages/frontend/dist
