--- a/infra/webapp/package.json
+++ b/infra/webapp/package.json
@@ -2,33 +2,34 @@
   "name": "@defol-cl/infra-webapp",
   "version": "0.1.0",
   "bin": {
-    "infra": "bin/webapp.js"
+    "webapp": "bin/webapp.js"
   },
   "private": true,
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "synth:develop": "cdk synth -c ACCOUNT=068561335847 -c REGION=us-east-1 -c ENV_ID=develop -c DOMAIN=open-data.cl -c SUBDOMAIN=develop"
+    "test": "jest",
+    "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.124.0",
-    "@aws-cdk/aws-certificatemanager": "1.124.0",
-    "@aws-cdk/aws-cloudfront": "1.124.0",
-    "@aws-cdk/aws-iam": "1.124.0",
-    "@aws-cdk/aws-route53": "1.124.0",
-    "@aws-cdk/aws-route53-targets": "1.124.0",
-    "@aws-cdk/aws-s3": "1.124.0",
+    "@aws-cdk/assert": "1.125.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.115.0",
+    "aws-cdk": "1.125.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.115.0",
-    "@defol-cl/infra-libs": "workspace:^1.0.0",
+    "@aws-cdk/core": "1.125.0",
+    "@aws-cdk/aws-certificatemanager": "1.125.0",
+    "@aws-cdk/aws-cloudfront": "1.125.0",
+    "@aws-cdk/aws-iam": "1.125.0",
+    "@aws-cdk/aws-route53": "1.125.0",
+    "@aws-cdk/aws-route53-targets": "1.125.0",
+    "@aws-cdk/aws-s3": "1.125.0",
+    "@aws-cdk/aws-ssm": "1.125.0",
     "source-map-support": "^0.5.16"
   }
 }
