--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -52,7 +52,7 @@ jobs:
   publish-libs:
     runs-on: ubuntu-latest
     needs: params
-    if: needs.params.outputs.libs == 'true'
+    if: needs.params.outputs.update-libs == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -67,11 +67,29 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm publish
+  publish-root:
+    runs-on: ubuntu-latest
+    needs: params
+    if: needs.params.outputs.update-libs == 'true'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 12
+          registry-url: https://npm.pkg.github.com
+      - name: npm-install
+        working-directory: ./packages/root
+        run: npm install --production
+      - name: npm-publish
+        working-directory: ./packages/root
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm publish
 
   backend:
     runs-on: ubuntu-latest
     needs: [params, publish-libs]
-    if: always() && (needs.params.outputs.libs == 'true' || needs.params.outputs.backend == 'true')
+    if: always() && (needs.params.outputs.update-libs == 'true' || needs.params.outputs.backend == 'true')
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
