--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -153,7 +153,7 @@ jobs:
 
   frontend:
     runs-on: ubuntu-latest
-    needs: [ params, publish-libs ]
+    needs: [ params, publish-root ]
     if: always() && (needs.params.outputs.libs == 'true' || needs.params.outputs.frontend == 'true')
     steps:
       - uses: actions/checkout@v2
