--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -154,7 +154,7 @@ jobs:
   frontend:
     runs-on: ubuntu-latest
     needs: [ params, publish-root ]
-    if: always() && (needs.params.outputs.libs == 'true' || needs.params.outputs.frontend == 'true')
+    if: always() && (needs.params.outputs.update-libs == 'true' || needs.params.outputs.frontend == 'true')
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
