--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@defol-cl/libs",
   "version": "1.0.11",
+  "private": false,
   "description": "",
   "main": "src/index",
   "types": "src/index",
