--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@defol-cl/frontend",
   "version": "1.0.11",
-  "private": true,
+  "private": "true",
   "repository": "git://github.com/defol-cl/defol.git",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
