--- a/infra/base/package.json
+++ b/infra/base/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@aws-cdk/core": "1.125.0",
     "@aws-cdk/aws-s3": "1.125.0",
+    "@aws-cdk/aws-ssm": "1.125.0",
     "source-map-support": "^0.5.16"
   }
 }
