--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,18 +7,19 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-beta.1",
-    "@material-ui/icons": "^5.0.0-beta.1",
     "@defol-cl/root": "1.0.11",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.2",
+    "@mui/styled-engine-sc": "^5.0.0",
+    "aws-amplify": "^4.3.1",
+    "aws-amplify-react": "^5.1.2",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "styled-components": "^5.3.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
