--- a/packages/backend/cloudformation.yaml
+++ b/packages/backend/cloudformation.yaml
@@ -5,6 +5,9 @@ Transform:
 Description: Backend del portal de clientes de defol
 
 Parameters:
+  Branch:
+    Type: String
+    Description: nombre de la rama
   ResourcesBucket:
     Type: String
     Description: bucket que aloja los recursos
@@ -74,3 +77,11 @@ Resources:
       CompatibleRuntimes:
         - nodejs12.x
       RetentionPolicy: Retain
+
+  ApiGatewayDomainNameParamater:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Description: API Gateway domain name paramater
+      Name: !Sub /defol/${Branch}/backend/api-gateway-domain-name
+      Type: String
+      Value: !Sub https://${Api}.execute-api.${AWS::Region}.amazonaws.com/api
