DONE: integrating backend api gateway to cdk webapp infrastructure (2)

--- a/packages/backend/cloudformation.yaml
+++ b/packages/backend/cloudformation.yaml
@@ -84,4 +84,4 @@ Resources:
       Description: API Gateway domain name paramater
       Name: !Sub /defol/${Branch}/backend/api-gateway-domain-name
       Type: String
-      Value: !Sub https://${Api}.execute-api.${AWS::Region}.amazonaws.com/api
+      Value: !Sub ${Api}.execute-api.${AWS::Region}.amazonaws.com
