--- a/infra/base/package.json
+++ b/infra/base/package.json
@@ -22,9 +22,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.125.0",
+    "@aws-cdk/aws-cognito": "^1.125.0",
     "@aws-cdk/aws-s3": "1.125.0",
     "@aws-cdk/aws-ssm": "1.125.0",
+    "@aws-cdk/core": "1.125.0",
     "source-map-support": "^0.5.16"
   }
 }
