DONE: integrating frontend with cognito cdk infrastructure using ssm parameters

--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -186,24 +186,28 @@ jobs:
         with:
           ssm_parameter: /defol/${{ steps.branch.outputs.name }}/frontend/cf-distribution-id
           env_variable_name: CFRONT_DIST_ID
-      - uses: marvinpinto/action-inject-ssm-secrets@latest
+      - name: get-frontend-cloudfront-distribution-id-ssm-parameter
+        uses: marvinpinto/action-inject-ssm-secrets@latest
         with:
           ssm_parameter: /defol/${{ steps.branch.outputs.name }}/base/user-pool-id
           env_variable_name: USER_POOL_ID
-      - uses: marvinpinto/action-inject-ssm-secrets@latest
+      - name: get-base-user-pool-client-id-ssm-parameter
+        uses: marvinpinto/action-inject-ssm-secrets@latest
         with:
           ssm_parameter: /defol/${{ steps.branch.outputs.name }}/base/user-pool-client-id
           env_variable_name: USER_POOL_CLIENT_ID
-      - uses: marvinpinto/action-inject-ssm-secrets@latest
+      - name: get-base-user-pool-region-ssm-parameter
+        uses: marvinpinto/action-inject-ssm-secrets@latest
         with:
           ssm_parameter: /defol/${{ steps.branch.outputs.name }}/base/user-pool-region
           env_variable_name: USER_POOL_REGION
-      - uses: marvinpinto/action-inject-ssm-secrets@latest
+      - name: get-frontend-bucket-name-ssm-parameter
+        uses: marvinpinto/action-inject-ssm-secrets@latest
         with:
           ssm_parameter: /defol/${{ steps.branch.outputs.name }}/frontend/bucket-name
           env_variable_name: S3_BUCKET
-      - name: Make envfile
-        uses: SpicyPizza/create-envfile@v1
+      - name: making-env-file
+        uses: SpicyPizza/create-envfile@v1.1
         with:
          envkey_REACT_APP_USER_POOL_ID: ${{ secrets.USER_POOL_ID }}
          envkey_REACT_APP_USER_POOL_CLIENT_ID: ${{ secrets.USER_POOL_CLIENT_ID }}
