--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,18 +10,22 @@
     "@defol-cl/root": "1.0.11",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.2",
     "@mui/styled-engine-sc": "^5.0.0",
     "aws-amplify": "^4.3.1",
     "aws-amplify-react": "^5.1.2",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^16.4.2",
@@ -30,6 +34,7 @@
     "@types/react-router-dom": "^5.1.8",
     "cross-env": "^7.0.3",
     "fork-ts-checker-webpack-plugin": "^6.2.13",
+    "node-sass": "^6.0.1",
     "react-app-rewired": "^2.1.8",
     "react-scripts": "4.0.3",
     "tsconfig-paths-webpack-plugin": "^3.5.1"
