--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.2",
     "@mui/styled-engine-sc": "^5.0.0",
+    "@mui/styles": "^5.0.1",
     "aws-amplify": "^4.3.1",
     "aws-amplify-react": "^5.1.2",
     "axios": "^0.21.1",
