--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -18,6 +18,7 @@ jobs:
     outputs:
       update-libs: ${{ steps.commit-message-libs.outputs.textFound }}
       libs: ${{ steps.packages-libs-changed.outputs.any_changed }}
+      root: ${{ steps.packages-root-changed.outputs.any_changed }}
       app-backend: ${{ steps.packages-app-backend-changed.outputs.any_changed }}
       app-frontend: ${{ steps.packages-app-frontend-changed.outputs.any_changed }}
       admin-backend: ${{ steps.packages-admin-backend-changed.outputs.any_changed }}
@@ -36,6 +37,12 @@ jobs:
         with:
           files: |
             packages/libs
+      - id: packages-root-changed
+        name: detect changes on packages/root
+        uses: tj-actions/changed-files@v1.1.3
+        with:
+          files: |
+            packages/root
       - id: packages-app-backend-changed
         name: detect changes on packages/app-backend
         uses: tj-actions/changed-files@v1.1.3
@@ -86,7 +93,7 @@ jobs:
   publish-root:
     runs-on: ubuntu-latest
     needs: params
-    if: needs.params.outputs.update-libs == 'true'
+    if: needs.params.outputs.update-root == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -306,7 +313,7 @@ jobs:
         run: |
           sam deploy --template-file packaged.yaml \
           --no-confirm-changeset --no-fail-on-empty-changeset \
-          --stack-name defol-${{ steps.branch.outputs.name }}-admin-backend \
+          --stack-name defol-${{ steps.branch.outputs.name }}-admin-backend-stack \
           --s3-bucket ${{ env.RESOURCE_S3_BUCKET }} \
           --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }} \
           --parameter-overrides ResourcesBucket=${{ env.RESOURCE_S3_BUCKET }} Sha=${{ github.sha }} \
