--- a/infra/app-base/package.json
+++ b/infra/app-base/package.json
@@ -6,10 +6,9 @@
   },
   "private": true,
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
+    "deploy:develop": "cdk deploy -c branch=develop",
+    "deploy:stage": "cdk deploy -c branch=stage",
+    "deploy:master": "cdk deploy -c branch=master"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.125.0",
