--- a/infra/base/package.json
+++ b/infra/base/package.json
@@ -21,7 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-cognito": "^1.125.0",
+    "@aws-cdk/aws-cognito": "1.125.0",
     "@aws-cdk/aws-s3": "1.125.0",
     "@aws-cdk/aws-ssm": "1.125.0",
     "@aws-cdk/core": "1.125.0",
