--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+packages/*/src/*.js
+packages/*/src/*.js.map
+packages/*/src/**/*.js
+packages/*/src/**/*.js.map
+!packages/*/src/setupProxy.js
+!packages/*/src/reportWebVitals.js
+!packages/*/config-overrides.js
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 yarn.lock
 npm.lock
